--- a/learnings/numpy_lessons.ipynb
+++ b/learnings/numpy_lessons.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,15 +75,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.55760421 0.60968451]\n",
-      " [0.12507675 0.84738531]]\n"
+      "[[0.90807834 0.12754793]\n",
+      " [0.04858376 0.9850783 ]]\n"
      ]
     }
    ],
@@ -94,22 +94,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.55760421, 0.60968451]])"
+       "array([[0.90807834, 0.12754793],\n",
+       "       [0.04858376, 0.9850783 ]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a3[:1]"
+    "a3[:2,]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a4 = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "print(a4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "\n",
+      "[[2 3]\n",
+      " [5 6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a4)\n",
+    "print()\n",
+    "a4_slice = a4[:2, 1:3]\n",
+    "print(a4_slice)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boolean Indexing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[11 12]\n",
+      " [13 14]\n",
+      " [15 16]]\n",
+      "\n",
+      "(3, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([[11,12],[13,14],[15,16]])\n",
+    "print(arr)\n",
+    "print()\n",
+    "print(arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False],\n",
+       "       [ True,  True],\n",
+       "       [ True,  True]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filter_a = (arr > 12)\n",
+    "filter_a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[13 14 15 16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[filter_a])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 11 412]\n",
+      " [ 13 414]\n",
+      " [ 15 416]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr[arr %2 ==0] +=100\n",
+    "print(arr)"
    ]
   },
   {
