--- a/learnings/numpy_lessons.ipynb
+++ b/learnings/numpy_lessons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -247,6 +247,42 @@
    "source": [
     "arr[arr %2 ==0] +=100\n",
     "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a1 = np.array([11,12])\n",
+    "print(a1.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "a2 = np.array([11.0,12], dtype=np.float64)\n",
+    "print(a2.dtype)"
    ]
   },
   {
